# netReg

./: .Rbuildignore  .Rbuildignore.swp  .Readme.md.swp  .Rhistory  .clang-format  .codecov.yml  .configure.ac.swp  .gitignore  .gitignore.swp  .gitmodules  .lintr  .travis.yml  .travis.yml.swp  CMakeLists.txt  DESCRIPTION  INSTALL  INSTALL.md  LICENSE  Makefile.am  NAMESPACE  NEWS  NEWS.md  README.Rmd  README.html  README.md  Readme.md  VERSIONS.md  _pkgdown.yml  appveyor.yml  cleanup  cleanup2  config.status  configure  configure.ac  netreg.Rproj
.github/workflows/: ci.yaml
R/: .edgenet_modelselection.R.swp  RcppExports.R  binomial_edgenet.R  binomial_edgenet_modelselection.R  data.R  edgenet.R  edgenet_binomial.R  edgenet_biological_application.R  edgenet_class.R  edgenet_cv.R  edgenet_fit.R  edgenet_gaussian.R  edgenet_loss.R  edgenet_modelselection.R  edgenet_modelselection_binomial.R  edgenet_modelselection_gaussian.R  edgenet_predict.R  edgenet_print.R  edgenet_util.R  family.R  fit.R  gaussian_edgenet.R  gaussian_edgenet_modelselection.R  group_lasso.R  group_lasso_loss.R  group_lasso_modelselection.R  likelihood.R  link.R  loss.R  methods-coef.R  methods-predict.R  methods-print.R  methods-summary.R  methods.R  model.R  netReg-package.R  optim.R  plot.R  predict.R  predictor.R  (+9 more)
_fig/: graph.gephi
benchmark/: .run_edgenet_benchmark.sh.swp  create_split_data_sets.R  edgenet_benchmark.R  edgenet_benchmark_plots.R  edgenet_benchmark_rss.R  edgenet_benchmark_time.R  edgenet_biological_application.R  edgenet_demo.R  edgenet_pure.R  run_bio_application.sh  run_edgenet_benchmark.sh
cmd_line/: main.cpp
cpp/: main.cpp
data/: GY.tsv  README.md  X.tsv  Y.tsv  yeast.rda
demo/: edgenet_demo.R
docs/: 404.html  INSTALL.html  LICENSE-text.html  LICENSE.html  authors.html  extra.css  extra.js  index.html  pkgdown.yml
docs/articles/: edgenet.html  index.html  netReg.bib  netReg.html  netReg_R.html  netReg_commandline.html
docs/news/: index.html
docs/reference/: cv.edgenet.html  cvedgenet-methods.html  edgenet-methods.html  edgenet.html  family-methods.html  grouplasso-methods.html  index.html  netReg-package.html  predict.binomial.edgenet.html  predict.gaussian.edgenet.html  yeast.html
examples/: example.ipynb
inst/: CITATION  NEWS
inst/armadillo/: armadillo
inst/cpp_tests/: Makefile.am  autotest.sh  benchmark.cpp  cleanup  configure.ac  profile.sh  test.cpp
inst/doc/: netReg.R  netReg.Rmd  netReg.html
inst/include/: netReg.h  netReg_RcppExports.h
inst/tests/: gmon.out  test.cpp
man/: cv.edgenet.Rd  cvedgenet-methods.Rd  edgenet-matrix-matrix-method.Rd  edgenet-matrix-numeric-method.Rd  edgenet-methods.Rd  edgenet.Rd  family-methods.Rd  grouplasso-methods.Rd  netReg-package.Rd  netreg-package.Rd  predict.edgenet.Rd  predict.gaussian.edgenet.Rd  print.edgenet.Rd  yeast.Rd
pkgdown/: _pkgdown.yml  extra.css
shiny/: server.R  ui.R
src/: .Makevars.in.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makevars.in  Makevars.win  RcppExports.cpp  binomial_edgenet.cpp  binomial_edgenet.hpp  binomial_edgenet_likelihood_function.hpp  binomial_edgenet_loss_function.hpp  cmake_install.cmake  config.h  config.h.in  cross_validation.hpp  cross_validaton.hpp  cv_fold.hpp  cv_set.cpp  cv_set.hpp  data_factory.cpp  data_factory.hpp  edgenet.cpp  edgenet.hpp  edgenet_abstract.hpp  edgenet_binomial.cpp  edgenet_binomial.hpp  edgenet_binomial_cv_deviance.hpp  edgenet_binomial_likelihood_function.hpp  edgenet_binomial_loss_function.hpp  edgenet_gaussian.cpp  edgenet_gaussian.hpp  edgenet_gaussian_cv_deviance.hpp  edgenet_gaussian_loss_function.hpp  edgenet_gaussian_model_selection.cpp  edgenet_gaussian_model_selection.hpp  edgenet_loss_function.hpp  edgenet_model_selection.cpp  edgenet_model_selection.hpp  edgenet_model_selection_wrapper.cpp  edgenet_model_selection_wrapper.hpp  (+43 more)
src/libnetreg/: Makefile.am  stamp-h1
src/libnetreg/data/cvdata/: cv_fold.hpp  cv_set.cpp  cv_set.hpp
src/libnetreg/data/modeldata/: graph_penalized_linear_model_data.hpp  linear_model_data.hpp  penalized_linear_model_data.hpp
src/libnetreg/exceptions/: illegal_argument_exception.hpp  io_exception.hpp  not_implemented_exception.hpp
src/libnetreg/func/: error_functions.cpp  error_functions.hpp  file_io.cpp  file_io.hpp  graph_functions.cpp  graph_functions.hpp  math_functions.cpp  math_functions.hpp  stat_functions.cpp  stat_functions.hpp  utility_functions.cpp  utility_functions.hpp  vector_functions.cpp
src/libnetreg/models/: edgenet.cpp  edgenet.hpp
src/libnetreg/modelselection/: edgenet_model_selection.cpp  edgenet_model_selection.hpp
src/libnetreg/modelselection/loss_functions/: edgenet_loss_function.hpp
src/libnetreg/modelselection/optim/: optim.hpp
src/libnetreg/struc/: types.hpp
src/libnetreg/struc/optim/: pareto_optimal_point.hpp
src/libnetreg/tests/: test_linalg.cpp  test_math.cpp  test_utility.cpp
src/tests/: Makefile.am  a.out  autotest.sh  benchmark.cpp  bla.cpp  bla2.cpp  cachegrind.out.5353  callgrind.out.10914  callgrind.out.12280  callgrind.out.23903  callgrind.out.56462  callgrind.out.6694  callgrind.out.6711  callgrind.out.6741  callgrind.out.6846  callgrind.out.92794  callgrind.out.93045  cleanup  configure  configure.ac  example  gmon.out  netreg  netreg_benchmarks  netreg_tests  profile.sh  test  test.R  test.cpp  test_arma.cpp  test_cdd_util.cpp  test_stats.cpp  tet.R
src/tests/netreg_benchmarks.dSYM/Contents/: Info.plist
src/tests/netreg_benchmarks.dSYM/Contents/Resources/DWARF/: netreg_benchmarks
tests/: testthat.R
tests/c++/: CMakeLists.txt  test_data.cpp  test_model.cpp  test_modelselection.cpp
tests/cpp/: CMakeLists.txt  benchmark.cpp  test.cpp  test_data.cpp  test_edgenet.cpp  test_edgenet_gaussian.cpp  test_edgenet_modelselection.cpp  test_error_functions.cpp  test_functions.cpp  test_graph_functions.cpp  test_math_functions.cpp  test_model.cpp  test_modelselection.cpp  test_stat_functions.cpp  test_vector_functions.cpp
vignettes/: edgenet.Rmd  netReg.R  netReg.Rmd  netReg.bib  netReg_R.Rmd  netReg_commandline.Rmd
(+16 files in other folders)
